--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -556,6 +556,8 @@ video {
 }
 
 *, ::before, ::after {
+	--tw-border-opacity: 1;
+	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
 	--tw-ring-offset-shadow: 0 0 #0000;
 	--tw-ring-shadow: 0 0 #0000;
 	--tw-shadow: 0 0 #0000;
@@ -664,6 +666,26 @@ video {
 	right: 0px;
 }
 
+.left-55 {
+	left: 220px;
+}
+
+.left-75 {
+	left: 435px;
+}
+
+.top-5 {
+	top: 1.25rem;
+}
+
+.top-10 {
+	top: 2.5rem;
+}
+
+.top-20 {
+	top: 5rem;
+}
+
 .z-20 {
 	z-index: 20;
 }
@@ -676,9 +698,18 @@ video {
 	grid-column: span 8 / span 8;
 }
 
+.m-auto {
+	margin: auto;
+}
+
 .my-20 {
 	margin-top: 5rem;
 	margin-bottom: 5rem;
+}
+
+.my-33 {
+	margin-top: 132px;
+	margin-bottom: 132px;
 }
 
 .mt-6 {
@@ -695,6 +726,62 @@ video {
 
 .mb-4 {
 	margin-bottom: 1rem;
+}
+
+.mt-33 {
+	margin-top: 132px;
+}
+
+.mb-14 {
+	margin-bottom: 3.5rem;
+}
+
+.mt-4 {
+	margin-top: 1rem;
+}
+
+.mr-2 {
+	margin-right: 0.5rem;
+}
+
+.ml-16\.5 {
+	margin-left: 66px;
+}
+
+.ml-16 {
+	margin-left: 4rem;
+}
+
+.-mt-29 {
+	margin-top: -116px;
+}
+
+.mt-24 {
+	margin-top: 6rem;
+}
+
+.mt-8 {
+	margin-top: 2rem;
+}
+
+.mr-4 {
+	margin-right: 1rem;
+}
+
+.mb-6 {
+	margin-bottom: 1.5rem;
+}
+
+.mr-16 {
+	margin-right: 4rem;
+}
+
+.mb-5 {
+	margin-bottom: 1.25rem;
+}
+
+.mr-14 {
+	margin-right: 3.5rem;
 }
 
 .block {
@@ -721,12 +808,40 @@ video {
 	height: 5rem;
 }
 
+.h-25 {
+	height: 6.25rem;
+}
+
+.h-8 {
+	height: 2rem;
+}
+
+.h-17\.5 {
+	height: 70px;
+}
+
 .w-113 {
 	width: 452px;
 }
 
 .w-193\.5 {
 	width: 774px;
+}
+
+.w-10\/12 {
+	width: 83.333333%;
+}
+
+.w-6\/12 {
+	width: 50%;
+}
+
+.w-8 {
+	width: 2rem;
+}
+
+.w-12 {
+	width: 3rem;
 }
 
 .flex-shrink-0 {
@@ -741,12 +856,24 @@ video {
 	grid-template-columns: repeat(12, minmax(0, 1fr));
 }
 
+.grid-cols-3 {
+	grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.flex-col {
+	flex-direction: column;
+}
+
 .items-center {
 	align-items: center;
 }
 
 .justify-end {
 	justify-content: flex-end;
+}
+
+.justify-center {
+	justify-content: center;
 }
 
 .justify-between {
@@ -767,6 +894,40 @@ video {
 
 .rounded-md {
 	border-radius: 0.625rem;
+}
+
+.rounded-full {
+	border-radius: 9999px;
+}
+
+.rounded-25 {
+	border-radius: 25px;
+}
+
+.border-4 {
+	border-width: 4px;
+}
+
+.border-l {
+	border-left-width: 1px;
+}
+
+.border-l-2 {
+	border-left-width: 2px;
+}
+
+.border-yellow-400 {
+	--tw-border-opacity: 1;
+	border-color: rgba(250, 204, 21, var(--tw-border-opacity));
+}
+
+.border-white {
+	--tw-border-opacity: 1;
+	border-color: rgba(255, 255, 255, var(--tw-border-opacity));
+}
+
+.border-opacity-5 {
+	--tw-border-opacity: 0.05;
 }
 
 .bg-primary-100 {
@@ -803,12 +964,24 @@ video {
 	background-color: rgba(143, 68, 173, var(--tw-bg-opacity));
 }
 
+.bg-opacity-5 {
+	--tw-bg-opacity: 0.05;
+}
+
 .bg-cover {
 	background-size: cover;
 }
 
 .bg-bottom {
 	background-position: bottom;
+}
+
+.p-10 {
+	padding: 2.5rem;
+}
+
+.p-5 {
+	padding: 1.25rem;
 }
 
 .py-4 {
@@ -841,6 +1014,11 @@ video {
 	padding-bottom: 1.75rem;
 }
 
+.py-33 {
+	padding-top: 132px;
+	padding-bottom: 132px;
+}
+
 .pt-5 {
 	padding-top: 1.25rem;
 }
@@ -851,6 +1029,18 @@ video {
 
 .pb-5 {
 	padding-bottom: 1.25rem;
+}
+
+.pl-16 {
+	padding-left: 4rem;
+}
+
+.pt-33 {
+	padding-top: 132px;
+}
+
+.pb-40 {
+	padding-bottom: 10rem;
 }
 
 .text-center {
@@ -865,12 +1055,20 @@ video {
 	font-size: 3.5rem;
 }
 
+.text-xl {
+	font-size: 1.25rem;
+}
+
 .font-medium {
 	font-weight: 500;
 }
 
 .font-normal {
 	font-weight: 400;
+}
+
+.font-bold {
+	font-weight: 700;
 }
 
 .leading-15 {
@@ -889,6 +1087,15 @@ video {
 .text-gray-50 {
 	--tw-text-opacity: 1;
 	color: rgba(190, 187, 182, var(--tw-text-opacity));
+}
+
+.text-yellow-400 {
+	--tw-text-opacity: 1;
+	color: rgba(189, 143, 27, var(--tw-text-opacity));
+}
+
+.opacity-5 {
+	opacity: 0.05;
 }
 
 .shadow {
