--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -118,6 +118,19 @@ Keyframes Animation
     left: 8px;
     border-radius: 10px;
 }
+
+.mobile-toggle  span:nth-child(1) {
+    
+  width: 30px;
+}
+.mobile-toggle  span:nth-child(2) {
+    
+    width: 40px;
+  }
+  .mobile-toggle  span:nth-child(3) {
+    
+    width: 30px;
+  }
 .mobile-toggle span:nth-child(2) {
     top: 19px;
 }
@@ -125,6 +138,7 @@ Keyframes Animation
     top: 28px;
 }
 .mobile-toggle.open span:nth-child(1) {
+    
     top: 20px;
     transform: rotate(-45deg);
 }
@@ -183,7 +197,7 @@ Keyframes Animation
     }
 }
 .header-sticky {
-    background-color: #000000;
+    background-color: #121211;
     position: fixed;
     top: 0 !important;
     animation: headerSlideDown 0.5s ease;
