--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -682,14 +682,6 @@ video {
 	z-index: 20;
 }
 
-.col-span-4 {
-	grid-column: span 4 / span 4;
-}
-
-.col-span-8 {
-	grid-column: span 8 / span 8;
-}
-
 .m-auto {
 	margin: auto;
 }
@@ -699,20 +691,24 @@ video {
 	margin-bottom: 5rem;
 }
 
-.mt-6 {
-	margin-top: 1.5rem;
-}
-
 .mt-12 {
 	margin-top: 3rem;
+}
+
+.mt-8 {
+	margin-top: 2rem;
+}
+
+.mt-20 {
+	margin-top: 5rem;
 }
 
 .-mt-33 {
 	margin-top: -132px;
 }
 
-.mb-4 {
-	margin-bottom: 1rem;
+.mb-2 {
+	margin-bottom: 0.5rem;
 }
 
 .mt-33 {
@@ -725,6 +721,10 @@ video {
 
 .mt-4 {
 	margin-top: 1rem;
+}
+
+.mb-4 {
+	margin-bottom: 1rem;
 }
 
 .mr-2 {
@@ -747,10 +747,6 @@ video {
 	margin-top: 6rem;
 }
 
-.mt-8 {
-	margin-top: 2rem;
-}
-
 .mb-6 {
 	margin-bottom: 1.5rem;
 }
@@ -771,8 +767,8 @@ video {
 	margin-right: 3.5rem;
 }
 
-.mb-2 {
-	margin-bottom: 0.5rem;
+.mt-10 {
+	margin-top: 2.5rem;
 }
 
 .block {
@@ -815,12 +811,8 @@ video {
 	width: 452px;
 }
 
-.w-193\.5 {
-	width: 774px;
-}
-
-.w-10\/12 {
-	width: 83.333333%;
+.w-full {
+	width: 100%;
 }
 
 .w-6\/12 {
@@ -841,10 +833,6 @@ video {
 
 .flex-grow {
 	flex-grow: 1;
-}
-
-.grid-cols-12 {
-	grid-template-columns: repeat(12, minmax(0, 1fr));
 }
 
 .grid-cols-3 {
@@ -922,11 +910,6 @@ video {
 	background-color: rgba(18, 18, 17, var(--tw-bg-opacity));
 }
 
-.bg-black {
-	--tw-bg-opacity: 1;
-	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
-}
-
 .bg-yellow-400 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(189, 143, 27, var(--tw-bg-opacity));
@@ -971,9 +954,9 @@ video {
 	padding: 1.25rem;
 }
 
-.py-4 {
-	padding-top: 1rem;
-	padding-bottom: 1rem;
+.py-2 {
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
 }
 
 .px-5 {
@@ -1029,6 +1012,14 @@ video {
 	text-align: center;
 }
 
+.text-xl {
+	font-size: 1.25rem;
+}
+
+.text-4xl {
+	font-size: 2.5rem;
+}
+
 .text-2xl {
 	font-size: 1.5rem;
 }
@@ -1037,8 +1028,8 @@ video {
 	font-size: 3.5rem;
 }
 
-.text-xl {
-	font-size: 1.25rem;
+.text-3xl {
+	font-size: 2rem;
 }
 
 .font-medium {
@@ -1055,6 +1046,10 @@ video {
 
 .leading-15 {
 	line-height: 15px;
+}
+
+.leading-47\.4 {
+	line-height: 47.4px;
 }
 
 .leading-18 {
@@ -1091,6 +1086,45 @@ video {
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
 
+@media (min-width: 768px) {
+
+	.md\:col-span-4 {
+		grid-column: span 4 / span 4;
+	}
+
+	.md\:col-span-8 {
+		grid-column: span 8 / span 8;
+	}
+
+	.md\:mt-0 {
+		margin-top: 0px;
+	}
+
+	.md\:grid {
+		display: grid;
+	}
+
+	.md\:w-193\.5 {
+		width: 774px;
+	}
+
+	.md\:grid-cols-12 {
+		grid-template-columns: repeat(12, minmax(0, 1fr));
+	}
+
+	.md\:text-4xl {
+		font-size: 2.5rem;
+	}
+
+	.md\:leading-18 {
+		line-height: 18px;
+	}
+
+	.md\:leading-66\.36 {
+		line-height: 66.36px;
+	}
+}
+
 @media (min-width: 1024px) {
 
 	.lg\:relative {
@@ -1107,6 +1141,10 @@ video {
 
 	.lg\:flex {
 		display: flex;
+	}
+
+	.lg\:hidden {
+		display: none;
 	}
 
 	.lg\:w-auto {
@@ -1129,6 +1167,11 @@ video {
 		padding: 1.25rem;
 	}
 
+	.lg\:py-4 {
+		padding-top: 1rem;
+		padding-bottom: 1rem;
+	}
+
 	.lg\:px-0 {
 		padding-left: 0px;
 		padding-right: 0px;
@@ -1136,6 +1179,10 @@ video {
 
 	.lg\:pb-0 {
 		padding-bottom: 0px;
+	}
+
+	.lg\:text-6xl {
+		font-size: 3.5rem;
 	}
 
 	.lg\:shadow-none {
