--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -107,7 +107,7 @@ Keyframes Animation
     width: 40px;
     height: 40px;
     padding: 15px;
-    right: 0;
+    right: 8px;
     position: absolute;
 }
 .mobile-toggle span {
