--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -771,6 +771,10 @@ video {
 	margin-top: 2.5rem;
 }
 
+.mt-6 {
+	margin-top: 1.5rem;
+}
+
 .block {
 	display: block;
 }
@@ -1012,6 +1016,14 @@ video {
 	padding-bottom: 10rem;
 }
 
+.pt-36 {
+	padding-top: 9rem;
+}
+
+.pb-12 {
+	padding-bottom: 3rem;
+}
+
 .text-center {
 	text-align: center;
 }
@@ -1058,6 +1070,10 @@ video {
 
 .leading-18 {
 	line-height: 18px;
+}
+
+.leading-tight {
+	line-height: 1.25;
 }
 
 .text-white {
@@ -1135,6 +1151,14 @@ video {
 		position: relative;
 	}
 
+	.lg\:left-55 {
+		left: 220px;
+	}
+
+	.lg\:left-75 {
+		left: 435px;
+	}
+
 	.lg\:my-20 {
 		margin-top: 5rem;
 		margin-bottom: 5rem;
@@ -1146,6 +1170,26 @@ video {
 
 	.lg\:mr-4 {
 		margin-right: 1rem;
+	}
+
+	.lg\:mt-12 {
+		margin-top: 3rem;
+	}
+
+	.lg\:-mt-33 {
+		margin-top: -132px;
+	}
+
+	.lg\:mt-33 {
+		margin-top: 132px;
+	}
+
+	.lg\:-mt-29 {
+		margin-top: -116px;
+	}
+
+	.lg\:block {
+		display: block;
 	}
 
 	.lg\:flex {
@@ -1194,6 +1238,11 @@ video {
 		padding-right: 0px;
 	}
 
+	.lg\:py-36 {
+		padding-top: 9rem;
+		padding-bottom: 9rem;
+	}
+
 	.lg\:pb-0 {
 		padding-bottom: 0px;
 	}
@@ -1204,6 +1253,10 @@ video {
 
 	.lg\:text-6xl {
 		font-size: 3.5rem;
+	}
+
+	.lg\:text-5xl {
+		font-size: 3rem;
 	}
 
 	.lg\:shadow-none {
